Added blog form validation

--- a/views/layouts/root.pug
+++ b/views/layouts/root.pug
@@ -10,8 +10,8 @@ html(lang="en")
     )
     link(rel='icon' type='image/x-icon' href='/images/favicon.png')
     link(rel='stylesheet', href='/stylesheets/style.css')
-    script(defer type='text/javascript' src='/tinymce/tinymce.min.js')
-    script(defer type='text/javascript' src='/javascripts/myTinyMCEConfig.js')
+    script(defer type='module' src='/tinymce/tinymce.min.js')
+    script(defer type='module' src='/javascripts/tinyMCEConfig.js')
     script(defer type='module' src='/javascripts/root.js')
 
   body
