--- a/views/pages/userProfile.pug
+++ b/views/pages/userProfile.pug
@@ -26,10 +26,7 @@ block page
                 .profile__browser-details
                     .profile__heading Recent Reads
                     .profile__body
-                        +iconL
-                        components
-                        list
-                        iconL inkList(
+                        +iconLinkList(
                             {
                                 'icon': '/images/profileIcon.png',
                                 'href': `#`,
@@ -50,10 +47,7 @@ block page
                         
                         .profile__heading= heading
                         .profile__body
-                            +iconL
-                            components
-                            list
-                            iconL inkList(
+                            +iconLinkList(
                                 {
                                     'icon': '/images/profileIcon.png',
                                     'href': `#`,
