--- a/public/stylesheets/pages/_blog-form.scss
+++ b/public/stylesheets/pages/_blog-form.scss
@@ -1,4 +1,5 @@
 @use '../globals/font-sizes' as fSizes;
+@use '../globals/icon-sizes' as iSizes;
 
 .blog-form-page {
     display: flex;
@@ -69,13 +70,42 @@
     }
 }
 
+.tinymce-app {
+    min-height: 100%;
+}
+
 .tox.tox-tinymce {
     min-height: 100%;
 }
 
 .blog-preview {
-    overflow: auto;
+    display: flex;
+    flex-direction: column;
     hyphens: auto;
+    gap: 1rem;
     width: 100%;
     height: 100%;
+
+    &__title {
+        font-size: fSizes.$larger;
+        font-weight: bold;
+        
+    }
+
+    &__thumbnail {
+        width: 60%;
+        aspect-ratio: 4/3;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    &__metadata {
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+    }
+
+    &__content {
+        overflow: auto;
+    }
 }
