--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -135,6 +135,17 @@
   margin-left: 1rem;
 }
 .form-input__error {
+  margin-top: 1rem;
+  color: red;
+  font-weight: bold;
+}
+
+.form-textarea {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.form-textarea__error {
   color: red;
   font-weight: bold;
 }
@@ -430,15 +441,39 @@
   display: none;
 }
 
+.tinymce-app {
+  min-height: 100%;
+}
+
 .tox.tox-tinymce {
   min-height: 100%;
 }
 
 .blog-preview {
-  overflow: auto;
+  display: flex;
+  flex-direction: column;
   hyphens: auto;
+  gap: 1rem;
   width: 100%;
   height: 100%;
+}
+.blog-preview__title {
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+.blog-preview__thumbnail {
+  width: 60%;
+  aspect-ratio: 4/3;
+  margin-left: auto;
+  margin-right: auto;
+}
+.blog-preview__metadata {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.blog-preview__content {
+  overflow: auto;
 }
 
 .blog-page {
