--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -2,6 +2,7 @@
 @use 'components/card/blog-card';
 @use 'components/card/comment-card';
 @use 'components/form/form-input';
+@use 'components/form/form-textarea';
 @use 'components/form/logging-form';
 @use 'components/form/searchbar';
 @use 'components/link/icon-link';
