Added backend to frontend render data flow

--- a/views/pages/blog.pug
+++ b/views/pages/blog.pug
@@ -5,6 +5,8 @@ include ../components/card/blogCard
 include ../components/card/commentCard
 
 block page
+    - const {title, blog} = data
+
     .blog-page
         .blog
             h1.blog__title= title
