--- a/views/pages/signupForm.pug
+++ b/views/pages/signupForm.pug
@@ -2,5 +2,7 @@ extends ../layouts/logging
 include ../components/form/loggingForm
 
 block loggingForm
+    - const {inputs, errors} = data
+
     h1.logging-page__heading Sign Up
     +loggingForm('/signup', inputs, errors)
