Blog form preview set to fixed size, scrollable

--- a/views/pages/blogForm.pug
+++ b/views/pages/blogForm.pug
@@ -82,6 +82,5 @@ block page
                 .blog-preview
                     .blog-preview__metadata
                         .blog-preview__title
-                        .blog-preview__thumbnail
-                            img
+                        .blog-preview__thumbnail Your thumbnail appears here
                     .blog-preview__content
