--- a/public/stylesheets/pages/_blog-form.scss
+++ b/public/stylesheets/pages/_blog-form.scss
@@ -3,24 +3,25 @@
 
 .blog-form-page {
     display: flex;
+    align-items: flex-start;
     width: 80%;
     padding-top: 2rem;
     padding-bottom: 2rem;
 
     &__left {
         flex: 1;
+        height: 100%;
         display: flex;
         flex-direction: column;
-        justify-content: center;
         align-items: center;
         gap: 1rem;
     }
 
     &__right {
         flex: 1;
+        height: 100%;
         display: flex;
         flex-direction: column;
-        justify-content: center;
         align-items: center;
         gap: 1rem;
     }
@@ -38,13 +39,11 @@
         width: 100%;
         padding: 1rem;
         border: 2px solid white;
+        overflow: auto;
     }
 }
 
 .blog-form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     height: 100%;
     width: 100%;
     border-top: 2px solid white;
@@ -93,10 +92,15 @@
     }
 
     &__thumbnail {
+        display: flex;
+        justify-content: center;
+        align-items: center;
         width: 60%;
         aspect-ratio: 4/3;
         margin-left: auto;
         margin-right: auto;
+        border: 2px dashed white;
+        font-size: fSizes.$large;
     }
 
     &__metadata {
@@ -106,6 +110,8 @@
     }
 
     &__content {
-        overflow: auto;
+        img {
+            width: 60%;
+        }
     }
 }
