Added user profile edit form

--- a/views/components/form/loggingForm.pug
+++ b/views/components/form/loggingForm.pug
@@ -32,4 +32,4 @@ mixin loggingForm(action, inputs={}, errors=[])
         if block 
             block
         
-        button.logging-form__submit Submit
+        button.logging-form__submit(type='submit') Submit
