--- a/public/stylesheets/pages/_user-profile.scss
+++ b/public/stylesheets/pages/_user-profile.scss
@@ -16,7 +16,7 @@
     gap: 4rem;
 
     &__user-details {
-        flex: 1;
+        flex: 2;
         display: flex;
         gap: 1rem;
     }
@@ -25,6 +25,12 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+    }
+
+    &__secondary-user-details {
+        &.-hidden {
+            display: none;
+        }
     }
 
     &__avatar {
@@ -61,5 +67,24 @@
     &__author-browser-details {
         flex: 1;
         margin-right: 4rem;
+    }
+}
+
+.profile-form {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+
+    &__buttons {
+        display: flex;
+        justify-content: space-around;
+    }
+
+    &.-hidden {
+        display: none;
+    }
+
+    textarea {
+        resize: none;
     }
 }
