--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -545,7 +545,7 @@
   gap: 4rem;
 }
 .profile__user-details {
-  flex: 1;
+  flex: 2;
   display: flex;
   gap: 1rem;
 }
@@ -553,6 +553,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+.profile__secondary-user-details.-hidden {
+  display: none;
 }
 .profile__avatar {
   height: 20rem;
@@ -582,6 +585,22 @@
 .profile__author-browser-details {
   flex: 1;
   margin-right: 4rem;
+}
+
+.profile-form {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.profile-form__buttons {
+  display: flex;
+  justify-content: space-around;
+}
+.profile-form.-hidden {
+  display: none;
+}
+.profile-form textarea {
+  resize: none;
 }
 
 * {
