--- a/public/stylesheets/pages/_user-profile.scss
+++ b/public/stylesheets/pages/_user-profile.scss
@@ -4,7 +4,7 @@
 
 
 .profile-page {
-    width: 75%;
+    width: 80%;
     
     &__heading {
         text-align: center;
@@ -13,29 +13,34 @@
 
 .profile {
     display: flex;
-    gap: 4rem;
+    gap: 2rem;
 
-    &__user-details {
-        flex: 2;
-        display: flex;
-        gap: 1rem;
-    }
-
-    &__primary-user-details {
+    &__primary {
+        flex: 1;
         display: flex;
         flex-direction: column;
         align-items: center;
+        gap: 1rem;
     }
 
-    &__secondary-user-details {
+    &__secondary {
+        flex: 1;
         &.-hidden {
             display: none;
         }
     }
 
+    &__tertiary {
+        flex: 1;
+    }
+
     &__avatar {
         height: iSizes.$xxlarge;
         width: iSizes.$xxlarge;
+
+        img {
+            border-radius: 50%;
+        }
     }
 
     &__username {
@@ -64,13 +69,10 @@
         margin-top: 1rem;
     }
 
-    &__author-browser-details {
-        flex: 1;
-        margin-right: 4rem;
-    }
 }
 
 .profile-form {
+    flex: 1;
     display: flex;
     flex-direction: column;
     gap: 1rem;
@@ -82,9 +84,5 @@
 
     &.-hidden {
         display: none;
-    }
-
-    textarea {
-        resize: none;
     }
 }
