--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -131,8 +131,10 @@
   gap: 3rem;
 }
 
-.form-input__input {
-  margin-left: 1rem;
+.form-input {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
 }
 .form-input__error {
   margin-top: 1rem;
@@ -534,7 +536,7 @@
 }
 
 .profile-page {
-  width: 75%;
+  width: 80%;
 }
 .profile-page__heading {
   text-align: center;
@@ -542,24 +544,30 @@
 
 .profile {
   display: flex;
-  gap: 4rem;
+  gap: 2rem;
 }
-.profile__user-details {
-  flex: 2;
-  display: flex;
-  gap: 1rem;
-}
-.profile__primary-user-details {
+.profile__primary {
+  flex: 1;
   display: flex;
   flex-direction: column;
   align-items: center;
+  gap: 1rem;
 }
-.profile__secondary-user-details.-hidden {
+.profile__secondary {
+  flex: 1;
+}
+.profile__secondary.-hidden {
   display: none;
+}
+.profile__tertiary {
+  flex: 1;
 }
 .profile__avatar {
   height: 20rem;
   width: 20rem;
+}
+.profile__avatar img {
+  border-radius: 50%;
 }
 .profile__username {
   font-size: 1.5rem;
@@ -582,12 +590,9 @@
 .profile__edit-button {
   margin-top: 1rem;
 }
-.profile__author-browser-details {
-  flex: 1;
-  margin-right: 4rem;
-}
 
 .profile-form {
+  flex: 1;
   display: flex;
   flex-direction: column;
   gap: 1rem;
@@ -598,9 +603,6 @@
 }
 .profile-form.-hidden {
   display: none;
-}
-.profile-form textarea {
-  resize: none;
 }
 
 * {
@@ -685,6 +687,20 @@ h2 {
 img {
   height: 100%;
   width: 100%;
+}
+
+input {
+  font-size: 1rem;
+}
+
+label {
+  font-weight: bold;
+}
+
+textarea {
+  margin: 0;
+  font-size: 1rem;
+  resize: none;
 }
 
 ul, ol {
