--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -116,6 +116,21 @@ img {
   width: 100%;
 }
 
+input {
+  font-size: fSizes.$medium;
+}
+
+label {
+  font-weight: bold;
+}
+
+textarea {
+  margin: 0;
+  font-size: fSizes.$medium;
+  resize: none;
+}
+
+
 ul, ol {
   list-style-type: none;
   padding-left: 0;
