--- a/views/components/form/formInput.pug
+++ b/views/components/form/formInput.pug
@@ -1,8 +1,12 @@
 mixin formInput(name, type, value, errors)
     .form-input&attributes(attributes.formInput)
+        - const labelWords = name.split('-')
+        each word, index in labelWords
+            - labelWords[index] = word[0].toUpperCase() + word.slice(1)
+
         label.form-input__label(
             for=name
-        )= name[0].toUpperCase() + name.slice(1)
+        )= labelWords.join(' ')
         input.form-input__input(
             id=name
             name=name 
