Added proper sanitization of input

--- a/views/layouts/root.pug
+++ b/views/layouts/root.pug
@@ -11,7 +11,7 @@ html(lang="en")
     link(rel='icon' type='image/x-icon' href='/images/favicon.png')
     link(rel='stylesheet', href='/stylesheets/style.css')
     script. 
-      const backendData = !{JSON.stringify(data)};
+      const backendData = !{JSON.stringify(safeData)};
     script(defer type='module' src='/tinymce/tinymce.min.js')
     script(defer type='module' src='/javascripts/root.js')
 
