--- a/views/components/toolbar/accountSidebar.pug
+++ b/views/components/toolbar/accountSidebar.pug
@@ -14,6 +14,13 @@ include ../list/iconLinkList
                 'label': 'Your Profile'     
             }
         )
+        +iconLinkList(
+            {
+                'icon': '/images/blogPostIcon.png',
+                'href': `/users/${mainUser.username}/blog-posts`,
+                'label': 'Your Blog Posts'
+            }
+        )
         .account-sidebar__logout
             a(href='/logout') Logout
     else 
