--- a/views/components/toolbar/contentSidebar.pug
+++ b/views/components/toolbar/contentSidebar.pug
@@ -7,13 +7,13 @@ include ../list/iconLinkList
         +iconLinkList(
             {
                 'icon': '/images/profileIcon.png',
-                'href': '/blogs',
-                'label': 'Blog 1'     
+                'href': '/blog-posts',
+                'label': 'Blog Post 1'     
             },
             {
                 'icon': '/images/profileIcon.png',
-                'href': '/blogs',
-                'label': 'Blog 2'
+                'href': '/blog-posts',
+                'label': 'Blog Post 2'
             }
         )
     .content-sidebar__heading Suggested
@@ -21,12 +21,12 @@ include ../list/iconLinkList
         +iconLinkList(
             {
                 'icon': '/images/profileIcon.png',
-                'href': '/blogs',
-                'label': 'Blog 1'     
+                'href': '/blog-posts',
+                'label': 'Blog Post 1'     
             },
             {
                 'icon': '/images/profileIcon.png',
-                'href': '/blogs',
-                'label': 'Blog 2'
+                'href': '/blog-posts',
+                'label': 'Blog Post 2'
             }
         )
