--- a/views/layouts/author.pug
+++ b/views/layouts/author.pug
@@ -12,7 +12,7 @@ block navbar
         .navbar__message Draft by #{mainUser.username}
     .navbar__right
         button(
-            form='blog-form'
+            form='blog-post-form'
             type='submit' 
             class='-colorful'
         ) Publish
