--- a/views/layouts/browser.pug
+++ b/views/layouts/browser.pug
@@ -15,7 +15,7 @@ block navbar
         if mainUser
             +iconLink(
                 '/images/writeIcon.png', 
-                `/users/${mainUser.username}/blogs/new-blog`,
+                `/users/${mainUser.username}/blog-posts/new-blog-post`,
                 'Write'
             )(class='-button')
         else 
