--- a/views/layouts/root.pug
+++ b/views/layouts/root.pug
@@ -6,7 +6,7 @@ html(lang="en")
     meta(name='viewport', content='width=device-width, initial-scale=1')
     meta(
       name='description' 
-      content='A place for reading blogs by coders and tech enthusiasts.'
+      content='A place for reading blog posts by coders and tech enthusiasts.'
     )
     link(rel='icon' type='image/x-icon' href='/images/favicon.png')
     link(rel='stylesheet', href='/stylesheets/style.css')
