--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -1,5 +1,5 @@
 @use 'components/button/icon-button';
-@use 'components/card/blog-card';
+@use 'components/card/blog-post-card';
 @use 'components/card/comment-card';
 @use 'components/form/form-input';
 @use 'components/form/form-textarea';
@@ -19,8 +19,8 @@
 @use 'layouts/browser';
 @use 'layouts/logging';
 @use 'layouts/toolbars';
-@use 'pages/blog-form';
-@use 'pages/blog';
+@use 'pages/blog-post-form';
+@use 'pages/blog-post';
 @use 'pages/index';
 @use 'pages/user-profile';
 
@@ -137,7 +137,7 @@ ul, ol {
   margin: 0;
 }
 
-.blog-card-pair {
+.blog-post-card-pair {
   display: flex;
   justify-content: center;
   align-items: center;
